syntax = "proto3";
package databaseGrpc;
import "db_message.proto";

service DbService {
  rpc SendRequest(DbMessage) returns (DbMessage) {}
}